--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="Szegedi Bence, Tukacs Patrik">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ToDo App</title>
 </head>
 <body>
-    <p>valami</p>
-    <p>kenyért</p>
-    <img src="./bx2.jpg" alt="VALAMI">
+    <h1>ToDo App</h1>
+    
 </body>
 </html>
