--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   </head>
   <body>
     <nav class="menu">
+      <h1>ToDo App</h1>
+      <div class="item">
+        <h1>Főoldal</h1>
+        <h1>Leírás</h1>
+      </div>
       <div>
         <button>Bejelentkezés</button>
         <button>Regisztráció</button>
