--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
         <button>Regisztráció</button>
       </div>
     </nav>
+    <img id="minta" src="./képek/minta.png" alt="minta">
   </body>
 </html>
