--- a/Sites/galeria.html
+++ b/Sites/galeria.html
@@ -6,19 +6,12 @@
     <link rel="icon" type="image/x-icon" href="./képek/pipa favicon.ico" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ToDo App</title>
-    <link rel="stylesheet" href="Styles/style.css" />
+    <title>Galéria</title>
+    <link rel="stylesheet" href="../Styles/style.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
   </head>
   <body>
-    
     <div id="header"></div>
-
-
-    <div class="container">
-      <!--<img id="boritokep" src="./képek/planner2.jpg" alt="naptár">-->
-      <div class="centered"></div>
-
-    <script src="JS/index.js"></script>
+    <script src="../JS/index.js"></script>
   </body>
 </html>
