--- a/Sites/galeria.html
+++ b/Sites/galeria.html
@@ -7,11 +7,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Galéria</title>
-    <link rel="stylesheet" href="../Styles/style.css" />
+    <link rel="stylesheet" href="../Styles/galeria.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
   </head>
   <body>
     <div id="header"></div>
+
+    
+    
+
+
     <script src="../JS/index.js"></script>
   </body>
 </html>
