--- a/Sites/galeria.html
+++ b/Sites/galeria.html
@@ -16,7 +16,9 @@
     
     
 
-
+    <footer class="footer">
+      <div class="name" id="right">ToDo APP by Tukacs Patrik and Szegedi Bence</div>
+    </footer>
     <script src="../JS/index.js"></script>
   </body>
 </html>
