--- a/Sites/bejelentkezes.html
+++ b/Sites/bejelentkezes.html
@@ -33,6 +33,10 @@
         <button type="submit" class="login">Login</button>
       </form>
     </div>
+    <footer class="footer">
+      <div class="name" id="right">ToDo APP by Tukacs Patrik and Szegedi Bence</div>
+      
+    </footer>
     <script src="../JS/index.js"></script>
   </body>
 </html>
