--- a/Sites/rolunk.html
+++ b/Sites/rolunk.html
@@ -12,6 +12,9 @@
   </head>
   <body>
     <div id="header"></div>
+    <footer class="footer">
+      <div class="name" id="right">ToDo APP by Tukacs Patrik and Szegedi Bence</div>
+    </footer>
     <script src="../JS/index.js"></script>
   </body>
 </html>
