--- a/Modules/nav.htm
+++ b/Modules/nav.htm
@@ -7,7 +7,7 @@
     <a id="left" href="../Sites/galeria.html">Galéria</a>
     <a id="left" href="../Sites/rolunk.html">Rólunk</a>
     <span class="logo">ToDo APP</span> <!--ezt szeretném a menuben full középre igazitani csak meg nme megy-->
-    <a class="gomb" id="right">Regisztráció</a>
+    <a class="gomb" id="right" href="../Sites/regisztracio.html">Regisztráció</a>
     <a class="gomb" id="right" href="../Sites/bejelentkezes.html">Bejelentkezés</a>
   </div>
 </body>
