--- a/Sites/rolunk.html
+++ b/Sites/rolunk.html
@@ -11,7 +11,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
   </head>
   <body>
-    <div id="header"></div>
+    <header id="header"></header>
+    
     <footer class="footer">
       <div class="name" id="right">ToDo APP by Tukacs Patrik and Szegedi Bence</div>
     </footer>
