--- a/1.mérföldkő/Sites/galeria.html
+++ b/1.mérföldkő/Sites/galeria.html
@@ -32,11 +32,11 @@
     </nav>
 
 
-    <div class="bg-image img1"></div>
-    <div class="bg-image img2"></div>
-    <div class="bg-image img3"></div>
-    <div class="bg-image img4"></div>
-    <div class="bg-image img5"></div>
+    <div class="bg-image gimg1"></div>
+    <div class="bg-image gimg2"></div>
+    <div class="bg-image gimg3"></div>
+    <div class="bg-image gimg4"></div>
+    
 
     <main class="bg-text">
         <table>
