--- a/1.mérföldkő/Sites/bejelentkezes.html
+++ b/1.mérföldkő/Sites/bejelentkezes.html
@@ -21,12 +21,12 @@
       <button class="ham" id="myBtn"><img src="../SVG/menu.svg" alt="" style="width: 2rem;"></button>
     </ul>
     <ul id="menu">
-      <li class="active"><a href="/Sites/index.html">Kezdőlap</a></li>
-      <li class="active"><a href="/Sites/galeria.html">Galéria</a></li>
+      <li><a href="/Sites/index.html">Kezdőlap</a></li>
+      <li><a href="/Sites/galeria.html">Galéria</a></li>
     </ul>
     <ul id="menu">
-        <li class="active"><a href="/Sites/regisztracio.html">Regisztráció</a></li>
-        <li class="active"><a href="/Sites/bejelentkezes.html">Bejelentkezés</a></li>
+        <li><a href="/Sites/regisztracio.html">Regisztráció</a></li>
+        <li><a href="/Sites/bejelentkezes.html">Bejelentkezés</a></li>
     </ul>
   </nav>
   
