--- a/1.mérföldkő/Sites/regisztracio.html
+++ b/1.mérföldkő/Sites/regisztracio.html
@@ -24,8 +24,8 @@
     <li class="active"><a href="/Sites/galeria.html">Galéria</a></li>
   </ul>
   <ul id="menu">
-      <li class="active"><a href="/Sites/regisztracio.html">Regisztráció</a></li>
-      <li class="active"><a href="/Sites/bejelentkezes.html">Bejelentkezés</a></li>
+      <li><a href="/Sites/regisztracio.html">Regisztráció</a></li>
+      <li><a href="/Sites/bejelentkezes.html">Bejelentkezés</a></li>
   </ul>
 </nav>
 
@@ -76,6 +76,7 @@
       document.getElementById("reset").reset();
     }
   </script>
+  <script src="../JS/nav.js"></script>
 </body>
 
 </html>
