--- a/1.mérföldkő/Sites/galeria.html
+++ b/1.mérföldkő/Sites/galeria.html
@@ -1,71 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="author" content="Szegedi Bence, Tukacs Patrik" />
-    <link rel="icon" type="image/x-icon" href="/Képek/pipa favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/Képek/pipa favicon.ico" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <title>Galéria</title>
     <link rel="stylesheet" href="../Styles/style.css" />
     <link rel="stylesheet" href="../Styles/nav.css" />
     <link rel="stylesheet" href="../Styles/footer.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <nav class="topnav">
-        <ul>
-          <p class="logo">ToDo APP</p>
-          <button class="ham" id="myBtn"><img src="../SVG/menu.svg" alt="" style="width: 2rem;"></button>
-        </ul>
-        <ul id="menu">
-          <li class="active"><a href="/Sites/index.html">Kezdőlap</a></li>
-          <li class="active"><a href="/Sites/galeria.html">Galéria</a></li>
-        </ul>
-        <ul id="menu">
-            <li class="active"><a href="/Sites/regisztracio.html">Regisztráció</a></li>
-            <li class="active"><a href="/Sites/bejelentkezes.html">Bejelentkezés</a></li>
-        </ul>
+      <ul>
+        <p class="logo">ToDo APP</p>
+        <button class="ham" id="myBtn">
+          <img src="../SVG/menu.svg" alt="" style="width: 2rem" />
+        </button>
+      </ul>
+      <ul id="menu">
+        <li><a href="/Sites/index.html">Kezdőlap</a></li>
+        <li class="active"><a href="/Sites/galeria.html">Galéria</a></li>
+      </ul>
+      <ul id="menu">
+        <li><a href="/Sites/regisztracio.html">Regisztráció</a></li>
+        <li><a href="/Sites/bejelentkezes.html">Bejelentkezés</a></li>
+      </ul>
     </nav>
-
 
     <div class="bg-image gimg1"></div>
     <div class="bg-image gimg2"></div>
     <div class="bg-image gimg3"></div>
     <div class="bg-image gimg4"></div>
-    
 
     <main class="bg-text">
-        <table>
-            <tr>
-                <th>A ToDo app-val</th>
-                <th>ToDo app nélkül</th>
-            </tr>
-            <tr>
-                <td>Rendezetten láthatod a teendőidet</td>
-                <td>A fejedben kell tartanod a programjaid</td>
-            </tr>
-            <tr>
-                <td>Mindig a rendelkezésedre áll</td>
-                <td>Lehet, hogy elfelejted milyen feladatok várnak még rád</td>
-            </tr>
-            <tr>
-                <td>Kiemelheted a legfontosabb eseményeidet</td>
-                <td>Nem tudod visszakeresni a részleteket, ha nem emlékszel</td>
-            </tr>
-            <tr>
-
-            </tr>
-
-        </table>
+      <table>
+        <tr>
+          <th>A ToDo app-val</th>
+          <th>ToDo app nélkül</th>
+        </tr>
+        <tr>
+          <td>Rendezetten láthatod a teendőidet</td>
+          <td>A fejedben kell tartanod a programjaid</td>
+        </tr>
+        <tr>
+          <td>Mindig a rendelkezésedre áll</td>
+          <td>Lehet, hogy elfelejted milyen feladatok várnak még rád</td>
+        </tr>
+        <tr>
+          <td>Kiemelheted a legfontosabb eseményeidet</td>
+          <td>Nem tudod visszakeresni a részleteket, ha nem emlékszel</td>
+        </tr>
+        <tr></tr>
+      </table>
     </main>
 
     <footer>
-            <p>Made by Tukacs Patrik, Szegedi Bence</p>
+      <p>Made by Tukacs Patrik, Szegedi Bence</p>
     </footer>
-</body>
-
+    <script src="../JS/nav.js"></script>
+  </body>
 </html>
