--- a/1.mérföldkő/Sites/index.html
+++ b/1.mérföldkő/Sites/index.html
@@ -13,6 +13,7 @@
     <title>ToDo App</title>
     <link rel="stylesheet" href="/Styles/style.css" />
     <link rel="stylesheet" href="/Styles/nav.css" />
+    <link rel="stylesheet" href="/Styles/cards.css" />
     <link rel="stylesheet" href="/Styles/hero.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
   </head>
@@ -44,6 +45,7 @@
         <p>A ToDo app segítségével ezt egyszerűen teheted meg.</p>
       </span>
     </div>
+
     <h2 class="card-title">Főbb feladatai</h2>
     <div id="cards">
       <div class="card">
@@ -66,26 +68,12 @@
         style="opacity: 0.7; height: 100vh; width: 100%"
         alt=""
       />
-      <div
-        style="
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-        "
-      >
-        <h2
-          style="
-            color: white;
-            font-size: 2.75rem;
-            width: 90%;
-            margin-bottom: 1rem;
-          "
-        >
+      <div class="text-container">
+        <h2>
           Hiszünk abban, hogy ezzel az applikációval motiválni tudunk téged,
           hogy produktív napod legyen.
         </h2>
-        <p style="font-size: 1.25rem">
+        <p>
           Regisztrálj még ma és használd <span id="ingyen">INGYEN</span> a
           ToDo-t!
         </p>
