--- a/1.mérföldkő/Sites/bejelentkezes.html
+++ b/1.mérföldkő/Sites/bejelentkezes.html
@@ -8,9 +8,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bejelentkezés</title>
-  <link rel="stylesheet" href="../Styles/style.css" />
-  <link rel="stylesheet" href="../Styles/form.css" />
-  <link rel="stylesheet" href="../Styles/nav.css" />
+  <link rel="stylesheet" href="/1.mérföldkő/Styles/style.css" />
+  <link rel="stylesheet" href="/1.mérföldkő/Styles/form.css" />
+  <link rel="stylesheet" href="/1.mérföldkő/Styles/nav.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 </head>
 
@@ -21,12 +21,12 @@
       <button class="ham" id="myBtn"><img src="../SVG/menu.svg" alt="" style="width: 2rem;"></button>
     </ul>
     <ul id="menu">
-      <li><a href="/Sites/index.html">Kezdőlap</a></li>
-      <li><a href="/Sites/galeria.html">Galéria</a></li>
+      <li><a href="/1.mérföldkő/Sites/index.html">Kezdőlap</a></li>
+      <li><a href="/1.mérföldkő/Sites/galeria.html">Galéria</a></li>
     </ul>
     <ul id="menu">
-        <li><a href="/Sites/regisztracio.html">Regisztráció</a></li>
-        <li><a href="/Sites/bejelentkezes.html">Bejelentkezés</a></li>
+        <li><a href="/1.mérföldkő/Sites/regisztracio.html">Regisztráció</a></li>
+        <li><a href="/1.mérföldkő/Sites/bejelentkezes.html">Bejelentkezés</a></li>
     </ul>
   </nav>
   
