--- a/1.mérföldkő/Sites/index.html
+++ b/1.mérföldkő/Sites/index.html
@@ -11,10 +11,11 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <title>ToDo App</title>
-    <link rel="stylesheet" href="/1.mérföldkő/Styles/style.css" />
-    <link rel="stylesheet" href="/1.mérföldkő/Styles/nav.css" />
-    <link rel="stylesheet" href="/1.mérföldkő/Styles/cards.css" />
-    <link rel="stylesheet" href="/1.mérföldkő/Styles/hero.css" />
+    <link rel="stylesheet" href="/Styles/style.css" />
+    <link rel="stylesheet" href="/Styles/nav.css" />
+    <link rel="stylesheet" href="/Styles/cards.css" />
+    <link rel="stylesheet" href="/Styles/hero.css" />
+    <link rel="stylesheet" href="/Styles/footer.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
   </head>
 
@@ -27,12 +28,12 @@
         </button>
       </ul>
       <ul id="menu">
-        <li class="active"><a href="/1.mérföldkő/Sites/index.html">Kezdőlap</a></li>
-        <li><a href="/1.mérföldkő/Sites/galeria.html">Galéria</a></li>
+        <li class="active"><a href="/Sites/index.html">Kezdőlap</a></li>
+        <li><a href="/Sites/galeria.html">Galéria</a></li>
       </ul>
       <ul id="menu">
-        <li><a href="/1.mérföldkő/Sites/regisztracio.html">Regisztráció</a></li>
-        <li><a href="/1.mérföldkő/Sites/bejelentkezes.html">Bejelentkezés</a></li>
+        <li><a href="/Sites/regisztracio.html">Regisztráció</a></li>
+        <li><a href="/Sites/bejelentkezes.html">Bejelentkezés</a></li>
       </ul>
     </nav>
 
