--- a/1.mérföldkő/Sites/index.html
+++ b/1.mérföldkő/Sites/index.html
@@ -40,12 +40,12 @@
     <div class="hero">
       <img class="hero-image" src="../képek/kavezok.jpg" alt="hello" />
       <span class="hero-text">
-        <h1 style="width: 50%">
+        <h1 >
           Szeretnéd könnybben és átláthatóbban rendezni a teendőidet?
         </h1>
         <p>A ToDo app segítségével ezt egyszerűen teheted meg.</p>
       </span>
-    </div>
+    </div>a
 
     <h2 class="card-title">Főbb feladatai</h2>
     <div id="cards">
@@ -66,7 +66,7 @@
     <div style="position: relative">
       <img
         src="../Képek/futas2.jpg"
-        style="opacity: 0.7; height: 100vh; width: 100%"
+        style="opacity: 0.7; height: 100vh; width: 100%;object-fit: cover;"
         alt=""
       />
       <div class="text-container">
