--- a/1.mérföldkő/Sites/bejelentkezes.html
+++ b/1.mérföldkő/Sites/bejelentkezes.html
@@ -27,7 +27,7 @@
     </ul>
     <ul id="menu">
         <li><a href="/Sites/regisztracio.html">Regisztráció</a></li>
-        <li><a href="/Sites/bejelentkezes.html">Bejelentkezés</a></li>
+        <li class="active"><a href="/Sites/bejelentkezes.html">Bejelentkezés</a></li>
     </ul>
   </nav>
   
