--- a/1.mérföldkő/Sites/galeria.html
+++ b/1.mérföldkő/Sites/galeria.html
@@ -11,9 +11,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <title>Galéria</title>
-    <link rel="stylesheet" href="/Styles/style.css" />
-    <link rel="stylesheet" href="/Styles/nav.css" />
-    <link rel="stylesheet" href="/Styles/footer.css" />
+    <link rel="stylesheet" href="../Styles/style.css" />
+    <link rel="stylesheet" href="../Styles/nav.css" />
+    <link rel="stylesheet" href="../Styles/footer.css" />
+    <link rel="stylesheet" href="../Styles/galeria.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
   </head>
 
@@ -26,12 +27,12 @@
         </button>
       </ul>
       <ul id="menu">
-        <li><a href="/Sites/index.html">Kezdőlap</a></li>
-        <li class="active"><a href="/Sites/galeria.html">Galéria</a></li>
+        <li><a href="../Sites/index.html">Kezdőlap</a></li>
+        <li class="active"><a href="../Sites/galeria.html">Galéria</a></li>
       </ul>
       <ul id="menu">
-        <li><a href="/Sites/regisztracio.html">Regisztráció</a></li>
-        <li><a href="/Sites/bejelentkezes.html">Bejelentkezés</a></li>
+        <li><a href="../Sites/regisztracio.html">Regisztráció</a></li>
+        <li><a href="../Sites/bejelentkezes.html">Bejelentkezés</a></li>
       </ul>
     </nav>
 
