animáció és nyomtatási oldal

--- a/1.mérföldkő/Sites/index.html
+++ b/1.mérföldkő/Sites/index.html
@@ -42,24 +42,24 @@
       <span class="hero-text">
         <h1>
           Szeretnéd könnybben és átláthatóbban rendezni a teendőidet?
-        </h1>
-        <p>A ToDo app segítségével ezt egyszerűen teheted meg.</p>
+        </h1> 
+        <p>A ToDo app segítségével ezt egyszerűen teheted meg.</p>  
       </span>
-    </div>a
+    </div>
 
-    <h2 class="card-title">Főbb feladatai</h2>
+    <h2 class="card-title">Főbb feladatai</h2>  
     <div id="cards">
       <div class="card">
         <img src="../képek/bike.jpg" alt="" />
-        <p>Átlátható heti naptár</p>
+        <p>Átlátható heti naptár</p>  
       </div>
       <div class="card">
         <img src="../képek/coffee-gc0ac3039f_1920.jpg" alt="" />
-        <p>Jegyzeteket írhatsz a teendők mellé</p>
+        <p>Jegyzeteket írhatsz a teendők mellé</p>  
       </div>
       <div class="card">
         <img src="../képek/guggolas.jpg" alt="" />
-        <p>Személyre szabhatod a megjelenítést</p>
+        <p>Személyre szabhatod a megjelenítést</p>  
       </div>
     </div>
 
@@ -73,11 +73,11 @@
         <h2>
           Hiszünk abban, hogy ezzel az applikációval motiválni tudunk téged,
           hogy produktív napod legyen.
-        </h2>
+        </h2> 
         <p>
           Regisztrálj még ma és használd <span id="ingyen">INGYEN</span> a
           ToDo-t!
-        </p>
+        </p>  
       </div>
     </div>
     <!-- <main class="bg-text">
