--- a/1.mérföldkő/Sites/index.html
+++ b/1.mérföldkő/Sites/index.html
@@ -40,7 +40,7 @@
     </nav>
 
     <div class="hero">
-      <img class="hero-image" src="../képek/kavezok.jpg" alt="hello" />
+      <img class="hero-image" src="../képek/kavezok.jpg" alt="Két kávézó beszélget" >
       <div class="hero-text">
         <h1>Szeretnéd könnybben és átláthatóbban rendezni a teendőidet?</h1>
         <p>A ToDo app segítségével ezt egyszerűen teheted meg.</p>
@@ -50,7 +50,7 @@
     <h2 class="card-title">Főbb feladatai</h2>
     <div id="cards">
       <div class="card">
-        <img src="../képek/bike.jpg" alt="" >
+        <img src="../képek/bike.jpg" alt="bicikli" >
         <p>Átlátható heti naptár</p>
       </div>
       <div class="card">
@@ -58,7 +58,7 @@
         <p>Jegyzeteket írhatsz a teendők mellé</p>
       </div>
       <div class="card">
-        <img src="../képek/guggolas.jpg" alt=""/>
+        <img src="../képek/guggolas.jpg" alt="guggolás" >
         <p>Személyre szabhatod a megjelenítést</p>
       </div>
     </div>
@@ -67,7 +67,7 @@
       <img
         src="../Képek/futas2.jpg"
         style="opacity: 0.7; height: 100vh; width: 100%; object-fit: cover"
-        alt=""
+        alt="futás"
       >
       <div class="text-container">
         <h2>
